fix body gap property mistake

--- a/styles.css
+++ b/styles.css
@@ -244,7 +244,7 @@ body {
     --fs-500: 3rem;
   }
 
-  .body {
+  body {
     gap: 1.875rem;
   }
 
